--- a/404.html
+++ b/404.html
@@ -15,6 +15,9 @@ layout: default
     line-height: 1;
     letter-spacing: -1px;
   }
+  #chapters-list {
+    max-height: 170px;
+  }
 </style>
 
 <div class="container">
